--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>622</width>
-    <height>549</height>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_5" stretch="5,2">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="8,16,12">
+       <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="8,16,0">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
@@ -260,7 +260,7 @@
               <item>
                <widget class="QCheckBox" name="checkBox_Blank">
                 <property name="text">
-                 <string>其中包含一行空行</string>
+                 <string>额外添加一行空行</string>
                 </property>
                </widget>
               </item>
@@ -281,12 +281,50 @@
             </property>
            </spacer>
           </item>
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,1">
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="checkBox_ShowLog">
+              <property name="text">
+               <string>显示详细讯息</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
          </layout>
         </item>
        </layout>
       </item>
       <item>
-       <widget class="QTextEdit" name="textEdit_"/>
+       <widget class="QTextEdit" name="textEdit_Log">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
