--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -207,6 +207,23 @@
               </item>
              </layout>
             </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,1">
+              <item>
+               <widget class="QLabel" name="label">
+                <property name="text">
+                 <string>输出文件</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="lineEdit_LogFile"/>
+              </item>
+             </layout>
+            </item>
            </layout>
           </item>
           <item>
